[package]
name = "weighted-selector"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Select type from weighted index"
repository = "https://github.com/piot/weighted-selector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
